<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoalumno">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/txtV_Perfil"
        android:background="@drawable/buton_round"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/txtV_Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Perfil"
        android:layout_centerHorizontal="true"
        android:textSize="45dp"
        android:layout_marginTop="30dp"
        />
    <ImageView
        android:id="@+id/imgV_FotoPerfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/logoceti1d"
        android:layout_below="@+id/txtV_Perfil"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txtV_nombrePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre:"
        android:layout_below="@+id/txtV_Perfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"
        android:textColor="#000"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/txtV_nombreAlummnoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:layout_below="@+id/txtV_nombrePerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"/>
    <TextView
        android:id="@+id/txtV_registroPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro:"
        android:layout_below="@+id/txtV_nombreAlummnoPerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"
        android:textColor="#000"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/txtV_registroAlummnoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        android:layout_below="@+id/txtV_registroPerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"/>
    <TextView
        android:id="@+id/txtV_carreraPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carrera:"
        android:layout_below="@+id/txtV_registroAlummnoPerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"
        android:textColor="#000"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/txtV_carreraAlummnoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Carrera"
        android:layout_below="@+id/txtV_carreraPerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"/>
    <TextView
        android:id="@+id/txtV_semestrePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Semestre:"
        android:layout_below="@+id/txtV_carreraAlummnoPerfil"
        android:textColor="#000"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"
        />
    <TextView
        android:id="@+id/txtV_semestreAlummnoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Semestre"
        android:layout_below="@+id/txtV_semestrePerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"
        />
    <TextView
        android:id="@+id/txtV_GrupoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Grupo:"
        android:layout_below="@+id/txtV_semestreAlummnoPerfil"
        android:textColor="#000"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"
        />
    <TextView
        android:id="@+id/txtV_GrupoAlummnoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Grupo"
        android:layout_below="@+id/txtV_GrupoPerfil"
        android:layout_toRightOf="@+id/imgV_FotoPerfil"/>
</RelativeLayout>